--- a/templates/home.html
+++ b/templates/home.html
@@ -56,9 +56,8 @@ body {
 <body>
 
 <div align="center">
-    <h2>Django Chat</h2>
+    <h2>Xiong's Family</h2>
 </div>
-
 
 <div class="container">
     <style>
@@ -96,10 +95,18 @@ body {
 
     <form id="post-form" method="POST" action="checkview">
         {% csrf_token %}
-        <label>Room Name</label>
-        <input type="text" name="room_name" id="room_name" width="100px" />
-        <label>Username</label>
-        <input type="text" name="username" id="username" width="100px" />
+        <label>Topic Selection</label>
+        <select name="room_name" id="room_name">
+          <option value="Miles Muxi Xiong">Miles Muxi Xiong</option>
+          <option value="Zhu_Health_Check">Zhu_Health_Check</option>
+          <option value="Xiong_Health_Check">Xiong_Health_Check</option>
+          <option value="4_Parents_Health">4_Parents_Health</option>
+        </select>
+        <label>Select Your Name</label>
+        <select name="username" id="username">
+          <option value="Liwen">Liwen</option>
+          <option value="Zebo">Zebo</option>
+        </select>
         <input type="submit" value="Enter Room">
     </form>
 </div>
